# anc216

./: .gitignore  LICENSE  README.md  build.ps1  build.sh
assembler/: CMakeLists.txt  analyzer.hh  assembler.cc  assembler.hh  ast.hh  build.ps1  clear.ps1  console.hh  grammar.txt  header.hh  index.ts  isa.hh  main.cc  module.anc216  package-lock.json  package.json  parse.hh  start.ps1  test.anc216  tokenizer.hh  types.hh
assembler/doc/: grammar.txt  grammar2.txt
assembler/include/: analyzer.hh  assembler.hh  ast.hh  header.hh  isa.hh  parse.hh  parser.hh  tokenizer.hh  types.hh
assembler/src/: anc216grammar.ohm  assembler.ts  common.ts  console.ts  lexer.ts  linker.ts  main.cc  parser.ts  preProcessor.ts  rules.ts  symbols.ts  syntaxRules.ts
assembler/test/: CMakeLists.txt  main.test.cc  module.anc216  test.anc216
assembler/test/cases/: test1.anc216  test2.anc216  test3.anc216  test4.anc216  test5.anc216
assembler/test/src/: assembler.test.hh  common.hh  console.hh  main.test.cc  parser.test.hh  tokenizer.test.hh
assembler/tests/: assembler.test.js  assembler.test.ts  lexer.test.js  lexer.test.ts  test1.anc216
cardreader/: CMakeLists.txt  afs.hh  build.ps1  file.txt  file2.txt  main.cc
cardreader/doc/: AFS.txt
cardreader/include/: afs.hh
cardreader/src/: main.cc
common/: colors.hh
disassembler/: CMakeLists.txt  start.ps1
disassembler/include/: disassembler.hh  header.hh  isa.hh
disassembler/src/: main.cc
disassembler/test/: a.anc216
editor/vscode/anc216-language-extension/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
editor/vscode/anc216-language-extension/syntaxes/: anc216.tmLanguage.json
emulator/: CMakeLists.txt  build.ps1  package-lock.json  package.json
emulator/include/: anc216.hh  avc64.hh  common.hh  console.hh  cpu.hh  debug.hh  device.hh  emem.hh  emu.hh  gpu.hh  isa.hh  types.hh  video.hh
emulator/src/: avc64.cc  cpu.cc  debug.cc  device.cc  emem.cc  gpu.cc  main.cc
emulator/tests/: emu.test.js
