cmake_minimum_required(VERSION 3.10)
project(anc216emu)
include(FindSDL)
include_directories(include/)
if (UNIX)
    find_package(SDL REQUIRED)
    target_link_libraries(myExe ${SDL2_LIBRARIES})
    target_include_directories(myExe ${SDL2_INCLUDE_DIRS})
endif (UNIX)
add_executable(anc216emu src/main.cc)