cmake_minimum_required(VERSION 3.10)
project(anc216emu)
set(CMAKE_CXX_STANDARD 20)
include_directories(include/)
add_executable(anc216emu src/device.cc src/cpu.cc src/emem.cc src/avc64.cc src/debug.cc src/main.cc)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CONF Debug)
else()
    set(CONF Release)
endif()

if (UNIX)
    find_package(SDL REQUIRED)
    target_link_libraries(anc216emu ${SDL2_LIBRARIES})
    target_include_directories(anc216emu ${SDL2_INCLUDE_DIRS})
elseif (WIN32)
    include_directories(lib/include)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        # 64 bits
        file(COPY lib/bin/x64/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CONF})
        target_link_libraries(anc216emu ${CONF}/SDL2main)
        target_link_libraries(anc216emu ${CONF}/SDL2)
    elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
        # 32 bits
        file(COPY lib/bin/x86/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CONF})
        target_link_libraries(anc216emu ${CONF}/SDL2main)
        target_link_libraries(anc216emu ${CONF}/SDL2)
    endif()
endif()